<resources>
    <string name="app_name">InstiGo</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hostel Issues</string>
    <string name="slide_1_desc">Send your hostel issues directly to concerned person</string>
    <string name="slide_2_title">Meetings</string>
    <string name="slide_2_desc">Get notified about daily events and meetings </string>
    <string name="slide_3_title">Resources</string>
    <string name="slide_3_desc">Contribute to huge collection of resources</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="or_login_using">Or login using</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_instruction">We just need your registered email id\n to send you reset instructions.</string>
    <string name="registered_email_id">Registered email id</string>
    <string name="back_to_login_page"><![CDATA[<< Back to Login page]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here">  <u> Login here!</u></string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string-array name="examples">
        <item>Hi User</item>
        <item>This is</item>
        <item>Made by Sonu Sourav</item>
    </string-array>


    <string name="tab1">CALLS</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>



    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>

    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>

    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>
    <string name="simple_circle_button_example">Simple Circle Button Example</string>
    <string name="text_inside_circle_button_example">Text Inside Circle Button Example</string>
    <string name="text_outside_circle_button_example">Text Outside Circle Button Example</string>
    <string name="ham_button_example">Ham Button Example</string>
    <string name="square_and_piece_corner_radius_example">Square And Piece Corner Radius Example</string>
    <string name="boom_example">Boom Example</string>
    <string name="button_place_alignment_example">Button Place Alignment Example</string>
    <string name="order_example">Order Example</string>
    <string name="actionbar_example">ActionBar Example</string>
    <string name="tool_bar_example">ToolBar Example</string>
    <string name="draggable_example">Draggable Example</string>
    <string name="ease_example">Ease Example</string>
    <string name="listener_example">Listener Example</string>
    <string name="control_example">Control Example</string>
    <string name="share_example">Share Example</string>
    <string name="list_example">List Example</string>
    <string name="recycler_view_example">Recycler View Example</string>
    <string name="fragment_example">Fragment Example</string>
    <string name="change_boom_button_example">Change Boom Button Example</string>
    <string name="three_d_animation_example">3D Animation Example</string>
    <string name="custom_position_example">Custom Position Example</string>
    <string name="fade_views_example">Fade Views Example</string>
    <string name="orientation_example">Orientation Example</string>
    <string name="mess_title">Mess Part</string>
    <string name="Breakfast">B\nR\nE\nA\nK\nF\nA\nS\nT</string>
    <string name="Lunch">L\nU\nN\nC\nH</string>
    <string name="Snacks">S\nN\nA\nC\nK\nS</string>
    <string name="Dinner">D\nI\nN\nN\nE\nR</string>
    <string name="item_name">Idli , Medu Vada ,\nCoconut Chutney , Sambhar ,\n Moong Sprouts , Boiled egg ,\nBanana ,Paneer Bhurji</string>

    <string-array name="feedbackAbout">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snacks</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="hostel">
      <item>Hostel</item>
        <item>Freshers Hostel</item>
        <item>Hostel 1</item>
        <item>Hostel 2</item>
        <item>Hostel 3</item>
        <item>Hostel 4</item>
        <item>Hostel 5</item>
        <item>Hostel 6</item>
        <item>Hostel 7</item>
        <item>Hostel 8</item>
        <item>Hostel 9</item>
        <item>Hostel 10</item>

    </string-array>

  <string-array name="house">
    <item>House</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
  </string-array>

  <string-array name="Complaint_type">
    <item>Type</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Carpenter</item>
        <item>House-Keeping</item>
        <item>Others</item>

    </string-array>

    <string-array name="dayOfWeek">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <item name="item_id" type="id" />

    <string-array name="gender">
      <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>

    <string-array name="doc_type">
        <item>Pdf</item>
        <item>Image</item>
        <item>PPT</item>
        <item>Excel</item>
        <item>Zip</item>
        <item>Other</item>
    </string-array>



    <string name="backdrop_title">InstiGo OPAC</string>
    <string name="backdrop_subtitle">More to come....</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="url_path">https://drive.google.com/open?id=0BzHSfMqO1EIMRnRYNllndWlfUW9TMTNDTGpmQUpRMEI3Y1Rz</string>
  <string name="web_client_id">336939768365-a5sl1einfnapcpkbmnlf9jmi2dnsfb3t.apps.googleusercontent.com</string>
  <string name="rating_unavailable">Ratings Unavailable</string>

</resources>
