<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/key_forgot_pass"
        android:src="@drawable/forgot_pass_back"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_forgot_pass"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/forgot_password"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_instruction"
            android:gravity="center_horizontal"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_email"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:maxLines="1"
            android:textSize="17sp"
            android:textColorHint="@color/hintcolor"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/registered_email_id"
            android:background="@drawable/round_textview"
            android:inputType="textEmailAddress" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:id="@+id/button_reset"
            android:text="@string/reset_password"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_login"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_to_login"
            android:text="@string/back_to_login_page"
            android:gravity="center_horizontal"
            android:textColor="@drawable/textview_selector"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginTop="40dp"
            />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>